# morok

./: .gitignore  .gitmodules  .tokeignore  404.html  AGENTS.md  CLAUDE.md  CNAME  CONSTRUCTORS_CORRECTNESS_REPORT.md  Cargo.toml  LICENSE  README.md  examples.html  flake.nix  index.html  index_dtype_fix_correction.md  index_dtype_lowering_final_design.md  index_dtype_lowering_issue_analysis.md  introduction.html  print.html  rustfmt.toml  searcher-c2a407aa.js  searchindex-0624f9d3.js  searchindex-403a6f69.js  sitemap.xml  toc-23939a7d.js  toc-6f19a375.js  toc.html
arch/: Cargo.toml
arch/src/: ctc.rs  lib.rs
arch/src/test/unit/: ctc.rs  mod.rs
arch/src/vad/: mod.rs  segment.rs
book/: book.toml
codegen/: Cargo.toml  README.md
codegen/src/: common.rs  context.rs  error.rs  lib.rs  program_pipeline.rs  traits.rs  types.rs
codegen/src/c/: amx.rs  mod.rs  ops.rs  types.rs
codegen/src/cranelift/: error.rs  helpers.rs  mod.rs  ops.rs  renderer.rs  types.rs
codegen/src/llvm/: builders.rs  error.rs  helpers.rs  intrinsics.rs  mod.rs  ops.rs  renderer.rs  types.rs
codegen/src/llvm/common/: builders.rs  ctx.rs  loop_gen.rs  mod.rs  types.rs
codegen/src/llvm/cpu/: mod.rs  ops.rs
codegen/src/llvm/gpu/: mod.rs  ops.rs
codegen/src/llvm/text/: ctx.rs  mod.rs  ops.rs  types.rs
codegen/src/mlir/: amx.rs  ctx.rs  mod.rs  ops.rs  types.rs
codegen/src/test/unit/: amx.rs  c.rs  llvm.rs  llvm_common_types.rs  llvm_text.rs  mlir.rs  mod.rs  ops.rs  program_pipeline.rs
device/: Cargo.toml  README.md
device/src/: allocator.rs  buffer.rs  device.rs  error.rs  lib.rs  queue.rs  registry.rs  sync.rs
device/src/test/: mod.rs  proptests.rs
device/src/test/unit/: buffer.rs  device.rs  mod.rs  registry.rs  sync.rs
dtype/: Cargo.toml  README.md
dtype/src/: cast.rs  ext.rs  lib.rs  proptest_gen.rs
dtype/src/test/: mod.rs  proptests.rs
dtype/src/test/proptests/: cast.rs  generators.rs  mod.rs
ir/: Cargo.toml  README.md
ir/src/: error.rs  indexing.rs  kernel_info.rs  lib.rs  op.rs  prelude.rs  provenance.rs  shape.rs  sint.rs  types.rs
ir/src/decompositions/: helpers.rs  mod.rs  ptrcat.rs  transcendentals.rs
ir/src/ops/: advanced.rs  arithmetic.rs  bitwise.rs  control.rs  mod.rs  movement.rs  reduction.rs  scalar.rs  vector.rs
ir/src/pattern/: helpers.rs  macros.rs  matcher.rs  mod.rs  simplified.rs  upat.rs
ir/src/rewrite/: engine.rs  mod.rs
ir/src/test/: mod.rs  movement.rs  ternary.rs
ir/src/test/property/: dtype_props.rs  generators.rs  mod.rs  shrinking.rs
ir/src/test/unit/: arithmetic.rs  bitwise.rs  comparison.rs  const_cast.rs  control.rs  memory.rs  mod.rs  movement.rs  provenance.rs  reduction.rs  shape.rs  sint.rs  ternary.rs  transcendental.rs  tree.rs  uop.rs  validation.rs  vector.rs  vmin_vmax.rs
ir/src/uop/: cached_property.rs  comparison_analysis.rs  constructors.rs  core.rs  debug.rs  eval.rs  hash_consing.rs  helpers.rs  mod.rs  properties.rs  range_eval.rs  tree.rs
ir/src/uop/constructors/: compute.rs  control.rs  data.rs  graph.rs  hardware.rs  memory.rs  mod.rs  reduce.rs  shape.rs
macros/: Cargo.toml
macros/src/: jit.rs  lib.rs
macros/src/pattern_enum/: analyze.rs  codegen.rs  mod.rs  parse.rs
macros/src/patterns/: codegen.rs  mod.rs  parser.rs
macros/src/patterns/test/: parser.rs
model/: Cargo.toml
model/examples/: gigaam_infer.rs  test_vad.rs
model/scripts/: pt_to_safetensors.py
model/src/: audio.rs  jit.rs  lib.rs  state.rs
model/src/gigaam/: encoder.rs  error.rs  head.rs  mod.rs  remap.rs  rope.rs
model/src/test/unit/: audio.rs  batch.rs  config.rs  jit.rs  mel.rs  mod.rs  remap.rs  state.rs
model/src/vad/: error.rs  mod.rs
model/tests/gigaam/: compare_pytorch.py  ctc_config.json
onnx/: Cargo.toml  PARITY.md  README.md  build.rs
onnx/scripts/: parity.py
onnx/src/: error.rs  importer.rs  lib.rs
onnx/src/parser/: mod.rs
onnx/src/registry/: attr.rs  constant.rs  indexing.rs  mod.rs  nn.rs  proto.rs  shape.rs  transformer.rs
onnx/src/test/: helpers.rs  light.rs  mod.rs  node.rs
runtime/: Cargo.toml  README.md
runtime/src/: benchmark.rs  clang.rs  cranelift.rs  custom_function.rs  device_registry.rs  dispatch.rs  error.rs  execution_plan.rs  executor.rs  jit_loader.rs  kernel.rs  kernel_cache.rs  lib.rs  llvm.rs  mlir.rs  profiler.rs
runtime/src/devices/: cpu.rs  cpu_queue.rs  mod.rs
runtime/src/test/: mod.rs
schedule/: Cargo.toml  README.md
schedule/src/: devectorize.rs  expand.rs  gpudims.rs  lib.rs  testing.rs
schedule/src/linearize/: cfg_context.rs  linearize.rs  mod.rs
schedule/src/optimizer/: beam.rs  config.rs  error.rs  heuristics.rs  kernel_info.rs  mod.rs  opts.rs  renderer.rs  scheduler.rs  strategy.rs  tc.rs  types.rs
schedule/src/passes/: linearize_index.rs  mod.rs
schedule/src/pattern/: macros.rs  matcher.rs  mod.rs  upat.rs
schedule/src/rangeify/: README.md  buffer_cost.rs  buffer_limits.rs  bufferize_to_store.rs  codegen_patterns.rs  context.rs  cycle_detection.rs  flatten_range.rs  helpers.rs  indexing.rs  kernel.rs  kernel_context.rs  mod.rs  movement_patterns.rs  patterns.rs  pipeline.rs  reduce_simplify.rs  split_kernel.rs  split_patterns.rs  split_reduceop.rs  transform.rs  transforms.rs
schedule/src/rewrite/: engine.rs  mod.rs
schedule/src/symbolic/: dce.rs  divmod.rs  fast_div.rs  index_lowering.rs  mod.rs  patterns.rs  valid_simplification.rs
schedule/src/test/: helpers.rs  mod.rs
schedule/src/z3/: alu.rs  convert.rs  mod.rs  verify.rs
tensor/: Cargo.toml  README.md
tensor/benches/: optimization.rs
tensor/src/: activation.rs  arithmetic.rs  bitwise.rs  broadcast.rs  buffer_registry.rs  conditional.rs  config.rs  data.rs  einsum.rs  error.rs  indexing.rs  lib.rs  math.rs  matmul.rs  memory_planner.rs  nn.rs  realize.rs  reduce.rs  schedule.rs  schedule_cache.rs  shape_ops.rs  tensor_registry.rs  traits.rs  transformer.rs
tensor/src/memory_planner/: mod.rs  tlsf.rs
tensor/src/nn/: conv.rs  grid_sample.rs  linear.rs  mod.rs  norm.rs  pad.rs  pool.rs  quantize.rs  resize.rs  rnn.rs
tensor/src/test/: helpers.rs  mod.rs  reference.rs
(+740 files in other folders)
