[workspace]
resolver = "3"
members = ["codegen", "device", "dtype", "ir", "macros", "runtime", "schedule", "tensor"]
exclude = ["submodules"]

[workspace.metadata.crane]
name = "morok"

[workspace.package]
authors = ["Patsakula Nikita <nikita.patsakula@gmail.com>"]
edition = "2024"
version = "0.1.0-alpha.0"

[workspace.dependencies]
ndarray = "0.17"
enum_delegate = "0.2"
