[workspace]
resolver = "3"
members = [
  "arch",
  "codegen",
  "device",
  "dtype",
  "ir",
  "macros", "model",
  "onnx",
  "runtime",
  "schedule",
  "tensor",
]
exclude = ["submodules"]

[workspace.metadata.crane]
name = "morok"

[workspace.package]
authors = ["Patsakula Nikita <nikita.patsakula@gmail.com>"]
edition = "2024"
version = "0.1.0-alpha.2"
license = "MIT"
repository = "https://github.com/npatsakula/morok"

[workspace.dependencies]
ndarray = "0.17"
enum_delegate = "0.2"
smallvec = "1.15"
