[package]
name = "morok-codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
morok-dtype = { path = "../dtype" }
morok-ir = { path = "../ir" }
morok-device = { path = "../device" }
morok-schedule = { path = "../schedule" }
snafu = "0.8.9"
itertools = "0.14.0"
tracing = "0.1"

[features]
default = []
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []

[dev-dependencies]
smallvec = "1.15.1"
test-case = "3.3.1"
