[package]
name = "morok-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend code generation for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.2" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.2" }
morok-device = { path = "../device", version = "=0.1.0-alpha.2" }
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.2" }
snafu = "0.8.9"
itertools = "0.14.0"
tracing = "0.1"
melior = { version = "0.26.3", features = ["ods-dialects"], optional = true }

[features]
default = []
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []
mlir = ["dep:melior"]

[dev-dependencies]
smallvec = { workspace = true }
test-case = "3.3.1"
