[package]
name = "morok-device"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Device abstraction layer for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.2" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.2" }

ndarray.workspace = true
enum_delegate.workspace = true

snafu = "0.8"
parking_lot = "0.12"
once_cell = "1.21"
smallvec = { workspace = true }
tracing = "0.1"
cudarc = { version = "0.17", features = ["cuda-13000"], optional = true }

proptest-derive = { version = "0.7", optional = true }
proptest = { version = "1.9", optional = true }
memmap2 = "0.9"

[dev-dependencies]
proptest = "1.9"
strum = "0.27.2"
tinyvec = "1.10"

[features]
default = []
proptest = ["dep:proptest", "dep:proptest-derive", "morok-dtype/proptest"]
# Devices
cuda = ["dep:cudarc"]
webgpu = []
metal = []
