[package]
name = "morok-dtype"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
proptest = { version = "1.10", optional = true }
proptest-derive = { version = "0.8", optional = true }

enumset = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

strum = { version = "0.27", features = ["derive"] }

[features]
default = ["proptest", "serde"]
proptest = ["dep:proptest", "dep:proptest-derive"]
serde = ["dep:serde"]
