[package]
name = "morok-dtype"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type system for the Morok ML compiler"
readme = "README.md"

[dependencies]
proptest = { version = "1.9", optional = true }
proptest-derive = { version = "0.8", optional = true }

enumset = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }

strum = { version = "0.28", features = ["derive"] }

[features]
default = ["proptest", "serde"]
proptest = ["dep:proptest", "dep:proptest-derive"]
serde = ["dep:serde"]
