[package]
name = "morok-ir"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
morok-dtype = { path = "../dtype" }
morok-device = { path = "../device" }
smallvec = { version = "1.15.1", features = [] }
snafu = "0.8.9"
itertools = "0.14.0"
proptest-derive = { version = "0.7", optional = true }
proptest = { version = "1.9.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
half = "2.7.1"
derive_more = { version = "2.1.1", features = ["display", "from"] }
libm = "0.2.15"

[dev-dependencies]
proptest = "1.9.0"
test-case = "3.3.1"
serde_json = "1"

[features]
proptest = ["dep:proptest", "dep:proptest-derive"]
serde = ["dep:serde", "smallvec/serde"]
