[package]
name = "morok-ir"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate representation for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.2", features = [
  "serde",
] }
morok-macros = { path = "../macros", version = "=0.1.0-alpha.2" }
smallvec = { workspace = true, features = ["serde"] }
snafu = "0.9.0"
itertools = "0.14.0"
proptest-derive = { version = "0.8", optional = true }
proptest = { version = "1.9.0", optional = true }
serde = { version = "1", features = ["derive"] }
half = "2.7.1"
derive_more = { version = "2.1", features = ["debug", "display", "from"] }
libm = "0.2.15"
papaya = "0.2.3"
ptree = "0.5"
tracing = "0.1"
strum = { version = "0.28.0", features = ["derive"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
bon = "3.8.2"

[dev-dependencies]
proptest = "1.9.0"
test-case = "3.3.1"
serde_json = "1"

[features]
proptest = ["dep:proptest", "dep:proptest-derive"]
# serde is always enabled but kept as a feature for downstream compatibility
serde = []
