[package]
name = "morok-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the Morok ML compiler"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits", "full", "parsing", "visit"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.11"
