[package]
name = "morok-model"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bon = "3.9.1"
hf-hub = "0.5.0"
hound = "3.5.1"
morok-device = { version = "0.1.0-alpha.2", path = "../device" }
morok-dtype = { version = "0.1.0-alpha.2", path = "../dtype", package = "morok-dtype" }
morok-ir = { version = "0.1.0-alpha.2", path = "../ir", package = "morok-ir" }
morok-macros = { version = "0.1.0-alpha.2", path = "../macros" }
morok-runtime = { version = "0.1.0-alpha.2", path = "../runtime" }
morok-tensor = { version = "0.1.0-alpha.2", path = "../tensor", package = "morok-tensor" }
ndarray.workspace = true
realfft = "3.5.0"
safetensors = "0.7.0"
serde_json = "1.0.149"
snafu = "0.9.0"

[dev-dependencies]
bytemuck = "1.25.0"
tempfile = "3.27.0"
test-case = "3.3.1"
