[package]
name = "morok-onnx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
morok-tensor = { path = "../tensor" }
morok-ir = { path = "../ir" }
morok-dtype = { path = "../dtype" }
prost = "0.14"
snafu = "0.9"
tracing = "0.1"
smallvec = "1.15"
bytemuck = "1.25"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
proptest = "1.10"
test-case = "3.3.1"
tracing-subscriber = "0.3.22"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
