[package]
name = "morok-onnx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ONNX model importer for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-tensor = { path = "../tensor", version = "=0.1.0-alpha.1" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.1" }
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.1" }
prost = "0.14"
snafu = "0.9"
tracing = "0.1"
smallvec = { workspace = true }
bytemuck = "1.25"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
ndarray.workspace = true
proptest = "1.11"
test-case = "3.3.1"
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.1", features = [
    "testing",
] }
morok-runtime = { path = "../runtime" }

[features]
mlir = ["morok-tensor/mlir"]
