[package]
name = "morok-runtime"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel execution runtime for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.0" }
morok-device = { path = "../device", version = "=0.1.0-alpha.0" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.0" }
morok-codegen = { path = "../codegen", version = "=0.1.0-alpha.0" }
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
snafu = "0.9.0"
parking_lot = "0.12"
once_cell = "1.21"
libc = "0.2"
papaya = "0.2.3"
rayon = "1.11"
tracing = "0.1"
libloading = "0.9"
tempfile = "3"
melior = { version = "0.26.3", features = ["ods-dialects"], optional = true }

[dev-dependencies]
smallvec = "1.15.1"
test-case = "3.3.1"

[features]
default = []
cuda = ["morok-device/cuda"]
mlir = ["dep:melior", "morok-codegen/mlir"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []
