[package]
name = "morok-runtime"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel execution runtime for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.1" }
morok-device = { path = "../device", version = "=0.1.0-alpha.1" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.1" }
morok-codegen = { path = "../codegen", version = "=0.1.0-alpha.1" }
snafu = "0.9.0"
parking_lot = "0.12"
once_cell = "1.21"
libc = "0.2"
papaya = "0.2.4"
rayon = "1.11"
tracing = "0.1"
libloading = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
object = { version = "0.39", default-features = false, features = ["read", "elf"] }
memmap2 = "0.9"
melior = { version = "0.27.0", features = ["ods-dialects"], optional = true }
libffi = "5.1.0"
smallvec = { workspace = true }

[dev-dependencies]
test-case = "3.3.1"

[features]
default = []
dlopen-fallback = ["dep:libloading", "dep:tempfile"]
cuda = ["morok-device/cuda"]
mlir = ["dep:melior", "morok-codegen/mlir"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []
