[package]
name = "morok-schedule"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
morok-ir = { path = "../ir" }
morok-dtype = { path = "../dtype" }
morok-device = { path = "../device" }
morok-macros = { path = "../macros" }
smallvec = { version = "1.15", features = ["union"] }
rayon = "1.11"
once_cell = "1.21"
sled = "0.34"
dirs = "6.0"
bon = "3.8"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

z3 = { version = "0.19", optional = true }
proptest-derive = { version = "0.7", optional = true }
snafu = "0.8.9"
tracing = "0.1"

[features]
default = []
z3 = ["dep:z3"]
proptest = ["dep:proptest-derive", "morok-ir/proptest"]
serde = ["morok-ir/serde"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []
# Devices
cuda = ["morok-device/cuda"]
metal = ["morok-device/metal"]
webgpu = ["morok-device/webgpu"]

[dev-dependencies]
proptest = "1.9.0"
morok-ir = { path = "../ir", features = ["proptest"] }
test-case = "3.3.1"
tracing-test = "0.2.5"
