[package]
name = "morok-schedule"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization passes and pattern engine for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-ir = { path = "../ir", version = "=0.1.0-alpha.0" }
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.0" }
morok-device = { path = "../device", version = "=0.1.0-alpha.0" }
morok-macros = { path = "../macros", version = "=0.1.0-alpha.0" }
smallvec = { version = "1.15", features = ["union"] }
rayon = "1.11"
once_cell = "1.21"
sled = "0.34"
dirs = "6.0"
bon = "3.9"
serde = { version = "1", features = ["derive"] }
bincode = "3.0"

z3 = { version = "0.19", optional = true }
proptest-derive = { version = "0.8", optional = true }
snafu = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
itertools = "0.14.0"
indexmap = "2.13.0"

[features]
default = []
testing = ["dep:tracing-subscriber"]
z3 = ["dep:z3"]
proptest = ["dep:proptest-derive", "morok-ir/proptest"]
serde = ["morok-ir/serde"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []
# Devices
cuda = ["morok-device/cuda"]
metal = ["morok-device/metal"]
webgpu = ["morok-device/webgpu"]

[dev-dependencies]
proptest = "1.9.0"
morok-ir = { path = "../ir", version = "=0.1.0-alpha.0", features = ["proptest"] }
test-case = "3.3.1"
