[package]
name = "morok-tensor"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
morok-dtype.path = "../dtype"
morok-ir.path = "../ir"
morok-device.path = "../device"
morok-codegen.path = "../codegen"
morok-runtime.path = "../runtime"
morok-schedule.path = "../schedule"
once_cell = "1.21.3"
snafu = "0.8.9"
bon = "3.8"
smallvec = "1.15"
ndarray.workspace = true
papaya = "0.2.3"
parking_lot = "0.12"
tracing = "0.1"
tikv-jemallocator = "0.6.1"

[features]
default = []
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
test-case = "3.3.1"
tracing-subscriber = "0.3.22"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[[bench]]
name = "optimization"
harness = false
