[package]
name = "morok-tensor"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level lazy tensor API for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.0" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.0" }
morok-device = { path = "../device", version = "=0.1.0-alpha.0" }
morok-codegen = { path = "../codegen", version = "=0.1.0-alpha.0" }
morok-runtime = { path = "../runtime", version = "=0.1.0-alpha.0" }
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.0" }
once_cell = "1.21.4"
snafu = "0.9.0"
bon = "3.9"
smallvec = "1.15"
ndarray.workspace = true
papaya = "0.2.3"
parking_lot = "0.12"
tracing = "0.1"
strum = { version = "0.28.0", features = ["derive"] }

[features]
default = []
mlir = ["morok-runtime/mlir"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
test-case = "3.3.1"
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.0", features = ["testing"] }

[[bench]]
name = "optimization"
harness = false
