[package]
name = "morok-tensor"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level lazy tensor API for the Morok ML compiler"
readme = "README.md"

[dependencies]
morok-dtype = { path = "../dtype", version = "=0.1.0-alpha.2" }
morok-ir = { path = "../ir", version = "=0.1.0-alpha.2" }
morok-device = { path = "../device", version = "=0.1.0-alpha.2" }
morok-codegen = { path = "../codegen", version = "=0.1.0-alpha.2" }
morok-runtime = { path = "../runtime", version = "=0.1.0-alpha.2" }
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.2" }
once_cell = "1.21.3"
snafu = "0.9.0"
bon = "3.8"
smallvec = { workspace = true }
ndarray.workspace = true
papaya = "0.2.3"
parking_lot = "0.12"
tracing = "0.1"
strum = { version = "0.28.0", features = ["derive"] }

[features]
default = []
mlir = ["morok-runtime/mlir"]
# Enable trace-level spans in hot paths (compile-time control)
tracing-verbose = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
test-case = "3.3.1"
morok-schedule = { path = "../schedule", version = "=0.1.0-alpha.2", features = [
  "testing",
] }
proptest = "1.11.0"

[[bench]]
name = "optimization"
harness = false
